--- a/main.tex
+++ b/main.tex
@@ -17,15 +17,12 @@
    \begin{adjustwidth}{0cm}{}
         %\renewcommand{\arraystretch}{1}
         
-        \begin{tabularx}{\textwidth}{ @{} >{\bfseries}l X}
-            \faEnvelope \ & alpargun@gmail.com \\
+        \begin{tabular}[t]{ l | l | l}
+            \faEnvelope \ alpargun@gmail.com & \faMobilePhone \ (+49) 172 566 8312 & \faMapMarker \ Aachen, GERMANY \\
             
-            \faGlobe \ & alpargun.com \\
+            \faGlobe \ alpargun.com & \faLinkedinSquare \ linkedin.com/in/alpargun
             
-            \faMobilePhone \ & (+49) 172 566 8312 \\
-            
-            \faMapMarker \ & Aachen, GERMANY
-        \end{tabularx}
+        \end{tabular}
     \end{adjustwidth}
    
    \iffalse
@@ -39,18 +36,14 @@
     \fi
 \end{minipage}%
 \begin{minipage}{.16\linewidth}
-   \includegraphics[width=0.8\textwidth]{alp_foto.jpg}
+   \includegraphics[width=6em]{alp_foto.jpg}
 \end{minipage} 
-
-
-
 
 
 %%--------------------------------------------------------------------------------------------------------------------------
 
 
 % EDUCATION ------------------------------------------------------------------------------------------------
-\sepspace
 
 % M.Sc.
 \vspace{-0.5\baselineskip}
@@ -58,40 +51,32 @@
 \NewPart{\faMortarBoard \space Education}{}
 \noindent
 
-\EducationEntry{M.Sc. Electrical and  Computer Engineering}{2019 - Present}{RWTH Aachen University} {} {IMG/education/rwth} {Aachen, GERMANY}
+\EducationEntry{M.Sc. Electrical and  Computer Engineering}{2019 - Present}{RWTH Aachen University} {  {\rule[-0.4ex]{0.2ex}{1.2em} GPA: 1.8 in German Grading System (3.47/4.00)}} {IMG/education/rwth} {Aachen, GERMANY}
 
 \sepspace
 
 % B.Sc.
 \EducationEntry{B.Sc. Electrical and Electronics Engineering}{2014 - 2018}{Bilkent University}  {\rule[-0.4ex]{0.2ex}{1.2em} GPA: 3.16/4.00, Honor Student} {IMG/education/bilkent} {Ankara, TURKEY}
 
-% \rule[-0.4ex]{0.2ex}{1.2em} 
-
-\sepspace
-
-% High School - commented out
-\iffalse
-\EducationEntry{High School and International Baccalaureate Diploma}{Sep 2010 - Jun 2014}{TED Ankara College Foundation Private High School Ankara, TURKEY}
-{\begin{itemize} 
-\item High School Diploma GPA: 89.16/100
-\item International Baccalaureate Diploma GPA: 31/45
-\end{itemize}} {IMG/education/ted}
-
-\sepspace
-
-\fi
 
 %%--------------------------------------------------------------------------------------------------------------------------
 % WORK EXPERIENCE--------------------------------------------------------------------------------------------
-
-\sepspace
 
 \vspace{-0.5\baselineskip}
 \NewPart{\faSuitcase \space Work experience}{}
 \noindent
 
 % Porsche - Internship
-\workEntry{Porsche AG}{05/2021 - Present}{Data Science Intern}{Data driven development for highly automated and assisted driving.} {IMG/work/porsche.png} {Stuttgart, GERMANY}
+\workEntry{Porsche AG}{05/2021 - 10/2021}{Data Science Intern}
+{Data driven development for highly automated and assisted driving. Developed a pipeline to improve cut-in detection and scale the results to the unlabeled data.
+{\begin{itemize}
+    \setlength\itemsep{-0.3em}
+    \item Explored the feature space to find the most important features for cut-in detection.
+    \item Applied weak supervision in scarcity of labeled data to provide weak labels.
+    \item Used supervised learning to combine multiple cut-in detectors and determine the combination that yields the best balance of precision and recall.
+    \item Followed a probabilistic approach to scale the results to the unlabeled data. 
+\end{itemize}}} 
+{IMG/work/porsche.png} {Stuttgart, GERMANY}
 
 \sepspace
 
@@ -99,24 +84,18 @@
 \workEntry{RWTH Aachen University}{06/2019 - 04/2021}{Student Research Assistant}
 {
 {\begin{itemize}
-\setlength\itemsep{-0.4em}
-\item Applied deep reinforcement learning to solve the autonomous driving problem on 2D (OpenAI Gym) and 3D (SVL Simulator) environments.
-\item Data analysis on battery data using SQL and Python.
-\item A Raspberry Pi project to control a bioreactor to stimulate tissues with a user interface and real-time plotting.
+    \setlength\itemsep{-0.3em}
+    \item Integrated a reinforcement learning framework into 2D (OpenAI Gym) and 3D (SVL Simulator) environments and applied deep reinforcement learning for autonomous driving at the Institute for Communication Technologies and Embedded Systems (RWTH ICE).
+    \item Data analytics on battery data using SQL and Python at the Institute of Power Electronics and Electrical Devices (RWTH ISEA).
+    \item Developed a Raspberry Pi project to control a bioreactor to stimulate tissues at the Institute of General Mechanics (RWTH IAM). Used multiprocessing in Python and implemented a user interface to configure the experiment and display a real-time plot.
 \end{itemize}}
 }
 {IMG/education/rwth.png} {Aachen, GERMANY}
 
 \sepspace
 
-
-% ASELSAN - Full time
-\workEntry{Aselsan}{01/2019 - 03/2019}{Software Engineer}{Worked on a computer vision project.} {IMG/work/aselsan.png} {Ankara, TURKEY}
-
-\sepspace
-
 % Siemens - Trainee
-\workEntry{Siemens}{09/2018 - 10/2018}{R\&D Engineering Trainee}{Developed a Raspberry Pi application to set up modal analysis for a transformer and plot data.} {IMG/work/siemens.png} {Budapest, HUNGARY}
+\workEntry{Siemens}{09/2018 - 10/2018}{R\&D Engineering Trainee}{Developed a Raspberry Pi application with a user interface to configure modal analysis for a transformer and plot data.} {IMG/work/siemens.png} {Budapest, HUNGARY}
 
 
 %%--------------------------------------------------------------------------------------------------------------------------
@@ -135,8 +114,6 @@
 %%--------------------------------------------------------------------------------------------------------------------------
 
 % SKILLS ------------------------------------------------------------------------------------------------
-\sepspace
-\sepspace
 
 \vspace{-0.5\baselineskip}
 
@@ -153,8 +130,8 @@
 \begin{tabular}[t]{ l | l | l}
 
 Python & C++ & MATLAB\\
-Java & SQL & VHDL\\
-HTML & CSS & JavaScript \\
+Java & SQL & JavaScript\\
+HTML & CSS  \\
 
 \end{tabular}
 
@@ -166,8 +143,9 @@ HTML & CSS & JavaScript \\
 \headingEntry{Frameworks \& Platforms}
 
 \begin{tabular}[t]{ l | l }
-Tensorflow & Linux\\
-Keras & Ray RLlib
+TensorFlow & Linux\\
+Keras & scikit-learn\\
+PyTorch & OpenCV
 
 \end{tabular}
 
@@ -184,7 +162,6 @@ Keras & Ray RLlib
 \flag{IMG/flag/de}  & German: B1
 \end{tabular}
 
-\sepspace
 \end{minipage}
 
 
@@ -193,7 +170,6 @@ Keras & Ray RLlib
 %%--------------------------------------------------------------------------------------------------------------------------
 
 % PROJECTS -----------------------------------------------------------------------------------------
-\sepspace
 
 \vspace{-0.5\baselineskip}
 
@@ -212,11 +188,7 @@ Keras & Ray RLlib
     \end{tabularx}
 \end{adjustwidth}
 
-\sepspace
-\sepspace
-
 %%--------------------------------------------------------------------------------------------------------------------------
-\sepspace
 
 % EXTRACURRICULAR
 \vspace{-1.5\baselineskip}
@@ -229,7 +201,7 @@ Keras & Ray RLlib
     \begin{tabularx}{\textwidth}{ @{} >{\bfseries}l X}
         07/2019 \ & Performed with RWTH Aachen University Choir and Orchestra \\
 
-        2014-2010 \ & Won medals in national and regional tournaments with TED Ankara College handball team \\
+        2010-2014 \ & Won medals in national and regional tournaments with TED Ankara College handball team \\
         
         09/2010 \ & Turkish national handball team training camp, Nigde, Turkey 
     \end{tabularx}
