add 'visualization' to Porsche job

--- a/main.tex
+++ b/main.tex
@@ -71,7 +71,7 @@
 {Data driven development for highly automated and assisted driving. Developed a pipeline to improve cut-in detection and scale the results to the unlabeled data.
 {\begin{itemize}
     \setlength\itemsep{-0.3em}
-    \item Explored the feature space to find the most important features for cut-in detection.
+    \item Visualized and explored the feature space to find the most important features for cut-in detection.
     \item Applied weak supervision in scarcity of labeled data to provide weak labels.
     \item Used supervised learning to combine multiple cut-in detectors and determine the combination that yields the best balance of precision and recall.
     \item Followed a probabilistic approach to scale the results to the unlabeled data. 
