add 'evaluation' to Porsche work

--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,7 @@
     \setlength\itemsep{-0.3em}
     \item Visualized and explored the feature space to find the most important features for cut-in detection.
     \item Applied weak supervision in scarcity of labeled data to provide weak labels.
-    \item Used supervised learning to combine multiple cut-in detectors and determine the combination that yields the best balance of precision and recall.
+    \item Used supervised learning to combine multiple cut-in detectors and evaluated them to determine the combination that yields the best balance of precision and recall.
     \item Followed a probabilistic approach to scale the results to the unlabeled data. 
 \end{itemize}}} 
 {IMG/work/porsche.png} {Stuttgart, GERMANY}
