add github link

--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
         \begin{tabular}[t]{ l | l | l}
             \faEnvelope \ alpargun@gmail.com & \faMobilePhone \ (+49) 172 566 8312 & \faMapMarker \ Aachen, GERMANY \\
             
-            \faGlobe \ alpargun.com & \faLinkedinSquare \ linkedin.com/in/alpargun
+            \faGlobe \ alpargun.com & \faLinkedinSquare \ linkedin.com/in/alpargun & \faGithub \ github.com/alpargun
             
         \end{tabular}
     \end{adjustwidth}
